--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,21 @@
 17/hbusa/proxy/ssl/ytwusa.3utilities.com.key
 17/hbusa/sbrmala/config/odoo.conf
 17/ytwusa/config/odoo.conf
+17/proxy/ssl/carcal.3utilities.com.crt
+17/proxy/ssl/staging-crm.shablalab.com.account.key
+17/proxy/ssl/staging-crm.shablalab.com.crt
+17/proxy/ssl/staging-crm.shablalab.com.csr
+17/proxy/ssl/staging-crm.shablalab.com.key
+17/proxy/ssl/ytwusa.3utilities.com.account.key
+17/proxy/ssl/ytwusa.3utilities.com.crt
+17/proxy/ssl/ytwusa.3utilities.com.csr
+17/proxy/ssl/ytwusa.3utilities.com.key
+17/proxy/config_avl/certbot.conf
+17/proxy/config_avl/staging-crm.shablalab.com.config
+17/proxy/html/.well-known/acme-challenge/jrfeTt37GVeFQfObGbxPx9W_mB-vheYbwrMPP2Isiy0
+17/proxy/html/.well-known/acme-challenge/n7JE9nr4B_h6vC6qQ6GhWHK-S9KGwrcMIcLStsH5BMk
+17/proxy/html/.well-known/acme-challenge/Nor8X0-_gbr8sVsWgKi24jtfj2conK4R1Bi73Osvqhc
+17/proxy/html/.well-known/acme-challenge/x-XY0bemyZtQJb8Eske-amMif9wk-KzOUDkgLP9MrpY
+17/proxy/html/.well-known/acme-challenge/XYE7ycCtvVvcr-3nR4mMqW8uu9YIJgBTs19tR9Bz-Ks
+17/proxy/html/acme-challenge/n7JE9nr4B_h6vC6qQ6GhWHK-S9KGwrcMIcLStsH5BMk
+17/sbrmala/config/odoo.conf
