--- a/17/proxy/config/modulesnow.conf
+++ b/17/proxy/config/modulesnow.conf
@@ -14,7 +14,7 @@ map $http_upgrade $connection_upgrade {
 # http -> https
 server {
   listen 80;
-  server_name modulesnow.ddns.net;
+  server_name modulesnow.com;
   rewrite ^(.*) https://$host$1 permanent;
     # log
   access_log /var/log/nginx/modulesnow.access.log;
@@ -23,14 +23,14 @@ server {
 
 server {
   listen 443 ssl;
-  server_name modulesnow.ddns.net;
+  server_name modulesnow.com;
   proxy_read_timeout 720s;
   proxy_connect_timeout 720s;
   proxy_send_timeout 720s;
 
   # SSL parameters
-  ssl_certificate /etc/ssl/nginx/modulesnow.ddns.net.crt;
-  ssl_certificate_key /etc/ssl/nginx/modulesnow.ddns.net.key;
+  ssl_certificate /etc/ssl/nginx/domains.modulesnow.com.crt;
+  ssl_certificate_key /etc/ssl/nginx/domains.modulesnow.com.key;
   ssl_session_timeout 30m;
   ssl_protocols TLSv1.2;
   ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
@@ -39,10 +39,9 @@ server {
   # log
   access_log /var/log/nginx/modulesnow.access.log;
   error_log /var/log/nginx/modulesnow.error.log;
- # location /.well-known/acme-challenge/ {
- #   root /usr/share/nginx/html;
-  
-  # }
+  #location /.well-known/acme-challenge/ {
+  #  root /usr/share/nginx/html;
+  #}
   # Redirect websocket requests to web gevent port
   location /websocket {
     proxy_pass http://modulesnowchat;
