--- a/16/docker-compose.yml
+++ b/16/docker-compose.yml
@@ -13,10 +13,33 @@ services:
       - postgresql_password
     networks:
       - lolo
+  postfixadmin:
+    depends_on:
+      - db
+    image: postfixadmin
+    ports:
+      - 8000:80
+    restart: always
+    environment:
+      - POSTFIXADMIN_DB_TYPE=pgsql
+      - POSTFIXADMIN_DB_HOST=db
+      - POSTFIXADMIN_DB_USER=odoo
+      - POSTFIXADMIN_DB_NAME=postgres
+      - POSTFIXADMIN_DB_PASSWORD_FILE=/run/secrets/postgresql_password
+      - POSTFIXADMIN_SMTP_SERVER=modulesnow.com
+      - POSTFIXADMIN_SETUP_PASSWORD=$$2y$$10$$IyhYxhzWr2Doa4Dwpw7cCewi6tcO8Bvn9/uReqlz5GQxsuy6W0cma
+    secrets:
+      - postgresql_password
+    networks:
+      - lolo  
+    secrets:
+      - postgresql_password
 volumes:
   odoo-db-data:
 secrets:
   postgresql_password:
     file: ./odoo_pg_pass.txt
+  postfixsetup_password:
+    file: ./postfixsetup_password.txt
 networks:
   lolo:
