--- a/16/proxy/config/modulesnow.conf
+++ b/16/proxy/config/modulesnow.conf
@@ -10,6 +10,16 @@ map $http_upgrade $connection_upgrade {
   default upgrade;
   ''      close;
 }
+# www --> non-www
+server {
+    listen               80;
+    listen               443 ssl;
+    server_name          www.modulesnow.com;
+    ssl_certificate /etc/ssl/nginx/domains.modulesnow.com.crt;
+    ssl_certificate_key /etc/ssl/nginx/domains.modulesnow.com.key;
+
+    return 301 $scheme://modulesnow.com$request_uri;
+}
 
 # http -> https
 server {
