--- a/16/proxy/config/sbrmala.conf
+++ b/16/proxy/config/sbrmala.conf
@@ -14,7 +14,7 @@ map $http_upgrade $connection_upgrade {
 # http -> https
 server {
   listen 80;
-  server_name staging-crm.shablalab.com;
+  server_name *.shablalab.com;
   rewrite ^(.*) https://$host$1 permanent;
     # log
   access_log /var/log/nginx/sbrmala.access.log;
@@ -23,7 +23,7 @@ server {
 
 server {
   listen 443 ssl;
-  server_name staging-crm.shablalab.com;
+  server_name *.shablalab.com;
   proxy_read_timeout 720s;
   proxy_connect_timeout 720s;
   proxy_send_timeout 720s;
